static/psi4manual/1.5.0/_sources/autodoc_psifiles.rst.txt
.. index:: psioh
.. _`apdx:psiFiles`:

PSIOH Intermediate Files
========================

.. table:: Auxiliary files in |PSIfour|

   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   | File | File Label                  | Contents                                                                                                                 |
   +======+=============================+==========================================================================================================================+
   |    1 | PSIF_OPTKING                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   11 | PSIF_GRAD                   | geometry optimization, geometry, and gradient; currently is an ASCII file like output.grad                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   12 | PSIF_INTCO                  | internal coordinates file, currently is ASCII file like output.intco                                                     |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   16 | PSIF_3INDEX                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   33 | PSIF_SO_TEI                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   34 | PSIF_SO_PK                  |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   35 | PSIF_OEI                    |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   36 | PSIF_SO_ERF_TEI             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   37 | PSIF_SO_ERFC_TEI            |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   38 | PSIF_SO_R12                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   39 | PSIF_SO_R12T1               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   40 | PSIF_DERINFO                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   41 | PSIF_SO_PRESORT             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   43 | PSIF_CIVECT                 | CI vector from DETCI along with string and determinant info                                                              |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   44 | PSIF_AO_DGDBX               | B-field derivative AO integrals over GIAO Gaussians -- only bra-ket permutational symmetry holds                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   45 | PSIF_AO_DGDBY               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   46 | PSIF_AO_DGDBZ               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   50 | PSIF_PSIMRCC_INTEGRALS      |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   51 | PSIF_PSIMRCC_RESTART        |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   52 | PSIF_MCSCF                  |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   53 | PSIF_TPDM_HALFTRANS         |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   60 | PSIF_DETCAS                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   61 | PSIF_LIBTRANS_DPD           | libtrans: All transformed integrals in DPD format are sent here by default                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   62 | PSIF_LIBTRANS_A_HT          | libtrans: Alpha half-transformed integrals in DPD format                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   63 | PSIF_LIBTRANS_B_HT          | libtrans: Beta half-transformed integrals in DPD format                                                                  |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   64 | PSIF_LIBDIIS                | Storage for libdiis                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   71 | PSIF_TPDM_PRESORT           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   72 | PSIF_MO_TEI                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   73 | PSIF_MO_OPDM                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   74 | PSIF_MO_TPDM                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   75 | PSIF_MO_LAG                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   76 | PSIF_AO_OPDM                | PSIF_AO_OPDM also contains AO Lagrangian                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   77 | PSIF_AO_TPDM                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   79 | PSIF_MO_R12                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   80 | PSIF_MO_R12T2               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   81 | PSIF_MO_AA_TEI              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   82 | PSIF_MO_BB_TEI              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   83 | PSIF_MO_AB_TEI              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   84 | PSIF_MO_AA_TPDM             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   85 | PSIF_MO_BB_TPDM             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   86 | PSIF_MO_AB_TPDM             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   87 | PSIF_AA_PRESORT             | AA UHF twopdm presort file                                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   88 | PSIF_BB_PRESORT             | BB UHF twopdm presort file                                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   89 | PSIF_AB_PRESORT             | AB UHF twopdm presort file                                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   92 | PSIF_SO_PKSUPER1            |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   93 | PSIF_SO_PKSUPER2            |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   94 | PSIF_HALFT0                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   95 | PSIF_HALFT1                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   97 | PSIF_DFSCF_BJ               | B Matrix containing 3-index tensor in AOs with J^-1/2 for use with DF-SCF                                                |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  100 | PSIF_CC_INFO                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  101 | PSIF_CC_OEI                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  102 | PSIF_CC_AINTS               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  103 | PSIF_CC_BINTS               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  104 | PSIF_CC_CINTS               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  105 | PSIF_CC_DINTS               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  106 | PSIF_CC_EINTS               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  107 | PSIF_CC_FINTS               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  108 | PSIF_CC_DENOM               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  109 | PSIF_CC_TAMPS               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  110 | PSIF_CC_GAMMA               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  111 | PSIF_CC_MISC                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  112 | PSIF_CC_HBAR                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  113 | PSIF_CC_OEI_NEW             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  114 | PSIF_CC_GAMMA_NEW           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  115 | PSIF_CC_AINTS_NEW           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  116 | PSIF_CC_BINTS_NEW           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  117 | PSIF_CC_CINTS_NEW           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  118 | PSIF_CC_DINTS_NEW           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  119 | PSIF_CC_EINTS_NEW           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  120 | PSIF_CC_FINTS_NEW           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  121 | PSIF_CC_LAMBDA              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  122 | PSIF_CC_RAMPS               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  123 | PSIF_CC_LAMPS               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  124 | PSIF_CC_LR                  |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  125 | PSIF_CC_DIIS_ERR            |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  126 | PSIF_CC_DIIS_AMP            |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  127 | PSIF_CC_TMP                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  128 | PSIF_CC_TMP0                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  129 | PSIF_CC_TMP1                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  130 | PSIF_CC_TMP2                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  131 | PSIF_CC_TMP3                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  132 | PSIF_CC_TMP4                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  133 | PSIF_CC_TMP5                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  134 | PSIF_CC_TMP6                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  135 | PSIF_CC_TMP8                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  137 | PSIF_CC_TMP9                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  138 | PSIF_CC_TMP10               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  139 | PSIF_CC_TMP11               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  140 | PSIF_EOM_D                  |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  141 | PSIF_EOM_CME                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  142 | PSIF_EOM_Cme                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  143 | PSIF_EOM_CMNEF              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  144 | PSIF_EOM_Cmnef              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  145 | PSIF_EOM_CMnEf              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  146 | PSIF_EOM_SIA                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  147 | PSIF_EOM_Sia                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  148 | PSIF_EOM_SIJAB              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  149 | PSIF_EOM_Sijab              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  150 | PSIF_EOM_SIjAb              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  151 | PSIF_EOM_R                  | holds residual                                                                                                           |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  152 | PSIF_CC_GLG                 | left-hand psi for g.s. parts of cc-density                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  153 | PSIF_CC_GL                  | left-hand psi for e.s. parts of cc-density                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  154 | PSIF_CC_GR                  | right-hand eigenvector for cc-density                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  155 | PSIF_EOM_TMP1               | intermediates just for single contractions                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  156 | PSIF_EOM_TMP0               | temporary copies of density                                                                                              |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  157 | PSIF_EOM_TMP_XI             | intermediates for xi computation                                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  158 | PSIF_EOM_XI                 | xi = dE/dt amplitudes                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  159 | PSIF_EOM_TMP                | intermediates used more than once                                                                                        |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  160 | PSIF_CC3_HET1               | [H,e^T1]                                                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  161 | PSIF_CC3_HC1                | [H,C1]                                                                                                                   |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  162 | PSIF_CC3_HC1ET1             | [[H,e^T1],C1]                                                                                                            |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  163 | PSIF_CC3_MISC               | various intermediates needed in CC3 codes                                                                                |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  164 | PSIF_CC2_HET1               | [H,e^T1]                                                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  165 | PSIF_WK_PK                  | File to contain wK pre-sorted integrals for PK                                                                           |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  180 | PSIF_SCF_MOS                | Save SCF orbitals for re-use later as guess, etc.                                                                        |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  181 | PSIF_DFMP2_AIA              | Unfitted three-index MO ints for DFMP2                                                                                   |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  182 | PSIF_DFMP2_QIA              | Fitted-three index MO ints for DFMP2                                                                                     |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  183 | PSIF_ADC                    | ADC                                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  184 | PSIF_ADC_SEM                | ADC                                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  190 | PSIF_SAPT_DIMER             | SAPT Two-Body Dimer                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  191 | PSIF_SAPT_MONOMERA          | SAPT Two-Body Mon A                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  192 | PSIF_SAPT_MONOMERB          | SAPT Two-Body Mon B                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  193 | PSIF_SAPT_AA_DF_INTS        | SAPT AA DF Ints                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  194 | PSIF_SAPT_AB_DF_INTS        | SAPT AB DF Ints                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  195 | PSIF_SAPT_BB_DF_INTS        | SAPT BB DF Ints                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  196 | PSIF_SAPT_AMPS              | SAPT Amplitudes                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  197 | PSIF_SAPT_TEMP              | SAPT Temporary worlds fastest code file                                                                                  |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  198 | PSIF_SAPT_LRINTS            | SAPT0 2-Body linear response LDA integrals                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  220 | PSIF_3B_SAPT_TRIMER         | SAPT Three-Body Trimer                                                                                                   |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  221 | PSIF_3B_SAPT_DIMER_AB       | SAPT Three-Body Dimer AB                                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  222 | PSIF_3B_SAPT_DIMER_AC       | SAPT Three-Body Dimer AC                                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  223 | PSIF_3B_SAPT_DIMER_BC       | SAPT Three-Body Dimer BC                                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  224 | PSIF_3B_SAPT_MONOMER_A      | SAPT Three-Body Mon A                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  225 | PSIF_3B_SAPT_MONOMER_B      | SAPT Three-Body Mon B                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  226 | PSIF_3B_SAPT_MONOMER_C      | SAPT Three-Body Mon C                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  227 | PSIF_3B_SAPT_AA_DF_INTS     |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  228 | PSIF_3B_SAPT_BB_DF_INTS     |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  229 | PSIF_3B_SAPT_CC_DF_INTS     |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  230 | PSIF_3B_SAPT_AMPS           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  250 | PSIF_DCC_IJAK               | CEPA/CC (ij|ak)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  251 | PSIF_DCC_IJAK2              | CEPA/CC (ij|ak)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  252 | PSIF_DCC_ABCI               | CEPA/CC (ia|bc)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  253 | PSIF_DCC_ABCI2              | CEPA/CC (ia|bc)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  254 | PSIF_DCC_ABCI3              | CEPA/CC (ia|bc)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  255 | PSIF_DCC_ABCI4              | CEPA/CC (ia|bc)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  256 | PSIF_DCC_ABCI5              | CEPA/CC (ia|bc)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  257 | PSIF_DCC_ABCD1              | CEPA/CC (ab|cd)+                                                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  258 | PSIF_DCC_ABCD2              | CEPA/CC (ab|cd)-                                                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  259 | PSIF_DCC_IJAB               | CEPA/CC (ij|ab)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  260 | PSIF_DCC_IAJB               | CEPA/CC (ia|jb)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  261 | PSIF_DCC_IJKL               | CEPA/CC (ij|kl)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  262 | PSIF_DCC_OVEC               | CEPA/CC old vectors for diis                                                                                             |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  263 | PSIF_DCC_EVEC               | CEPA/CC error vectors for diis                                                                                           |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  264 | PSIF_DCC_R2                 | CEPA/CC residual                                                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  265 | PSIF_DCC_TEMP               | CEPA/CC temporary storage                                                                                                |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  266 | PSIF_DCC_T2                 | CEPA/CC t2 amplitudes                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  267 | PSIF_DCC_QSO                | DFCC 3-index integrals                                                                                                   |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  270 | PSIF_DCC_SORT_START         | CEPA/CC integral sort starting file number                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  271 | PSIF_SAPT_CCD               | SAPT2+ CCD Utility File                                                                                                  |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  272 | PSIF_HESS                   | Hessian Utility File                                                                                                     |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  273 | PSIF_OCC_DPD                | OCC DPD                                                                                                                  |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  274 | PSIF_OCC_DENSITY            | OCC Density                                                                                                              |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  275 | PSIF_OCC_IABC               | OCC out-of-core <IA|BC>                                                                                                  |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  276 | PSIF_DFOCC_INTS             | DFOCC Integrals                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  277 | PSIF_DFOCC_AMPS             | DFOCC Amplitudes                                                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  278 | PSIF_DFOCC_DENS             | DFOCC PDMs                                                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  279 | PSIF_DFOCC_IABC             | DFOCC (IA|BC)                                                                                                            |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  280 | PSIF_DFOCC_ABIC             | DFOCC <AB|IC>                                                                                                            |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  281 | PSIF_DFOCC_MIABC            | DFOCC M_iabc                                                                                                             |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  282 | PSIF_DFOCC_TEMP             | DFOCC temporary storage                                                                                                  |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  300 | PSIF_SAD                    | A SAD file (File for SAD related quantities                                                                              |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  350 | PSIF_CI_HD_FILE             | DETCI H diagonal                                                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  351 | PSIF_CI_C_FILE              | DETCI CI coeffs                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  352 | PSIF_CI_S_FILE              | DETCI sigma coeffs                                                                                                       |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  353 | PSIF_CI_D_FILE              | DETCI D correction vectors                                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  400 | PSIF_DCT_DPD                | DCT DPD handle                                                                                                           |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  401 | PSIF_DCT_DENSITY            | DCT density                                                                                                              |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+

